# forge-mind

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  README.md  docker-compose.yml  pyproject.toml  tmp-after-new-session.md
.playwright-mcp/: page-2026-05-25T07-01-30-767Z.yml  page-2026-05-25T07-01-52-801Z.yml  page-2026-05-25T07-02-52-994Z.yml  page-2026-05-25T07-03-07-438Z.yml  page-2026-05-25T07-09-30-261Z.yml  page-2026-05-25T07-09-42-085Z.yml  page-2026-05-25T07-10-14-366Z.yml  page-2026-05-25T07-10-21-715Z.yml  page-2026-05-25T07-12-17-057Z.yml  page-2026-05-25T07-13-00-383Z.yml  page-2026-05-25T07-13-26-429Z.yml  page-2026-05-25T07-16-51-875Z.yml  page-2026-05-25T07-17-06-602Z.yml  page-2026-05-25T07-17-40-013Z.yml  page-2026-05-25T07-17-47-200Z.yml  page-2026-05-25T07-23-41-796Z.yml
backend/: config.py  main.py  store.py
backend/agents/: __init__.py  coder.py  orchestrator.py  reviewer.py
backend/models/: session.py
backend/routes/: contracts.py  sandbox.py  sessions.py  visual.py
backend/skills/: __init__.py  ast_visual.py  base.py  sandbox_simulation.py  security_audit.py  solidity_generation.py
backend/utils/: solc_detector.py
docs/: sandbox-feature-requirements.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatPanel.tsx  CodeEditor.tsx  CodeViewer.tsx  (+3 more)
tests/: conftest.py  test_ast_visual.py  test_orchestrator.py  test_routes.py  test_sandbox_simulation.py  test_security_audit.py  test_sessions.py  test_solc_detector.py  test_solidity_generation.py
(+3 files in other folders)
