[project]
name = "forge-mind"
version = "0.1.0"
description = "AI Agent-based smart contract collaborative development platform"
requires-python = ">=3.12"
dependencies = [
    "litestar[standard]>=2.12.0",
    "anthropic>=0.40.0",
    "web3>=7.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0,<1.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
